[gd_scene load_steps=3 format=3 uid="uid://petcarescene001"]

[ext_resource type="Script" path="res://Scripts/Pet.gd" id="1_script"]
[ext_resource type="Texture" path="res://Assets/Lazy Slime.png" id="2_pet"]

[node name="PetCare" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.9, 0.8, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.3, 0.2, 0.1, 1)
theme_override_font_sizes/font_size = 48
text = "My Pet"
horizontal_alignment = 1

[node name="PetContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PetSprite" type="Sprite2D" parent="PetContainer"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_pet")

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
alignment = 1

[node name="NameLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "Pet Name"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "Lv. 1"
horizontal_alignment = 1

[node name="BuffLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.5, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Bonus: +10 HP"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_vertical = 2
alignment = 1

[node name="JoyLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Happiness"

[node name="JoyBar" type="ProgressBar" parent="StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 50.0

[node name="HungerLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Fullness"

[node name="HungerBar" type="ProgressBar" parent="StatsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 50.0

[node name="ActionsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="FeedBtn" type="Button" parent="ActionsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Feed"

[node name="PlayBtn" type="Button" parent="ActionsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="BackBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 70.0
grow_horizontal = 0
text = "Back"

[connection signal="pressed" from="ActionsContainer/FeedBtn" to="." method="_on_feed_btn_pressed"]
[connection signal="pressed" from="ActionsContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
